--- a/src/Makefile
+++ b/src/Makefile
@@ -71,11 +71,11 @@ DIST_SOURCES = $(fatcache_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/bess/fatcache-0.1.1/config/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/hx/fatcache/config/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
-AUTOCONF = ${SHELL} /home/bess/fatcache-0.1.1/config/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/bess/fatcache-0.1.1/config/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/bess/fatcache-0.1.1/config/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/hx/fatcache/config/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/hx/fatcache/config/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/hx/fatcache/config/missing --run automake-1.11
 AWK = mawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -100,7 +100,7 @@ LDFLAGS =  -rdynamic
 LIBOBJS = 
 LIBS = -lpthread 
 LTLIBOBJS = 
-MAKEINFO = ${SHELL} /home/bess/fatcache-0.1.1/config/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/hx/fatcache/config/missing --run makeinfo
 MKDIR_P = /bin/mkdir -p
 OBJEXT = o
 PACKAGE = fatcache
@@ -115,10 +115,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = 
 VERSION = 0.1.1
-abs_builddir = /home/bess/fatcache-0.1.1/src
-abs_srcdir = /home/bess/fatcache-0.1.1/src
-abs_top_builddir = /home/bess/fatcache-0.1.1
-abs_top_srcdir = /home/bess/fatcache-0.1.1
+abs_builddir = /home/hx/fatcache/src
+abs_srcdir = /home/hx/fatcache/src
+abs_top_builddir = /home/hx/fatcache
+abs_top_srcdir = /home/hx/fatcache
 ac_ct_CC = gcc
 am__include = include
 am__leading_dot = .
@@ -145,7 +145,7 @@ host_vendor = unknown
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/bess/fatcache-0.1.1/config/install-sh
+install_sh = ${SHELL} /home/hx/fatcache/config/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
